@@ -502,6 +502,14 @@ CustomLog @rel_logfiledir@/access_log common
 #CustomLog @rel_logfiledir@/access_log combined
 
 #
+# ServerTokens
+# This directive configures what you return as the Server HTTP response
+# Header. The default is 'Full' which sends information about the OS-Type
+# and compiled in modules.
+# Set to one of:  Full | OS | Minor | Major | Prod
+# where Full conveys the most information, and Prod the least.
+ServerTokens Full
+#
 # Optionally add a line containing the server version and virtual host
 # name to server-generated pages (internal error documents, FTP directory 
 # listings, mod_status and mod_info output etc., but not CGI generated 
